Corrected style for code block. Every codeblock unnecessarily had a horiz scrollbar

--- a/sass/parts/_syntax.scss
+++ b/sass/parts/_syntax.scss
@@ -121,7 +121,6 @@ figure.code{
 	td.code{
 		width: 100%;
 		padding-left: 15px;
-		overflow-x: auto;
 	}
 }
 .entry-content .gist{
